<resources>
    <!-- AndroidManifest.xml ====================================================================-->
    <string name="app_name">BeachRatingApp</string>

    <!-- activity_launch.xml ====================================================================-->
    <!-- Text References -->
    <string name="launch_continue_text">Press Anywhere to Continue</string>

    <!-- Content Descriptions -->
    <string name="cd_launch_background_imageview">Launch Background Image</string>

    <!-- activity_login.xml ======================================================================-->
    <!-- Text References -->
    <string name="login_existing_account_tab">Existing Account</string>
    <string name="login_new_account_tab">New Account</string>

    <!--=========================================================================================-->
    <!-- fragment_existing_account.xml -->
    <!-- Text References -->
    <string name="existing_account_email_or_username_colontext">Email/Username: </string>
    <string name="existing_account_password_colontext">Password: </string>
    <string name="existing_account_email_or_username_hinttext">Email/Username</string>
    <string name="existing_account_password_hinttext">Password</string>
    <string name="existing_account_forgot_email_or_username_questiontext">Forgot Email/Username?</string>
    <string name="existing_account_forgot_password_questiontext">Forgot Password?</string>
    <string name="existing_account_status_text">Your Credentials Are Acceptable</string>
    <string name="existing_account_confirmation_button_text">Login</string>

    <!-- Content Descriptions -->
    <string name="cd_existing_account_confirmation_button">Existing Account Confirmation Button</string>
    <string name="cd_existing_account_email_or_username_textview">Existing Account Email or Username TextView</string>
    <string name="cd_existing_account_password_textview">Existing Account Password TextView</string>
    <string name="cd_existing_account_status_textview">Existing Account Status TextView</string>
    <string name="cd_existing_account_forgot_email_or_username_textview">Existing Account Forgot Email or Username TextView</string>
    <string name="cd_existing_account_forgot_password_textview">Existing Account Forgot Password TextView</string>
    <!--=========================================================================================-->
    <!-- fragment_new_account.xml -->
    <!-- Text References -->
    <string name="new_account_username_colontext">Username: </string>
    <string name="new_account_password_colontext">Password: </string>
    <string name="new_account_repeat_password_colontext">Repeat Password: </string>
    <string name="new_account_email_colontext">Email: </string>
    <string name="new_account_username_hinttext">Username</string>
    <string name="new_account_password_hinttext">Password</string>
    <string name="new_account_repeat_password_hinttext">Repeat Password</string>
    <string name="new_account_email_hinttext">Email</string>
    <string name="new_account_status_text">Your Credentials are Acceptable</string>
    <string name="new_account_confirmation_button_text">Confirm</string>

    <!-- Content Descriptions -->
    <string name="cd_new_account_confirmation_button">New Account Confirmation Button</string>
    <string name="cd_new_account_username_textview">New Account Username TextView</string>
    <string name="cd_new_account_password_textview">New Account Password TextView</string>
    <string name="cd_new_account_repeat_password_textview">New Account Repeat Password TextView</string>
    <string name="cd_new_account_email_textview">New Account Email TextView</string>
    <string name="cd_new_account_status_textview">New Account Status TextView</string>

    <!--=========================================================================================-->
    <!-- activity_home.xml -->
    <string name="home_title_text">Home Screen</string>

    <!--=========================================================================================-->
    <!-- item_beach.xml -->
    <!-- Text References -->
    <string name="beach_title_text">Beach</string>
    <string name="beach_rating_colontext">Rating: </string>
    <string name="beach_rating_text">Public Rating [1–5]</string>
    <string name="beach_rating_submission_button_text">Submit</string>

    <!-- Content Descriptions -->
    <string name="cd_beach_placeholder_imageview">Placeholder Beach ImageView</string>
    <string name="cd_beach_personal_rating_ratingbar">Personal Beach Rating Bar</string>

    <!--=========================================================================================-->
    <!-- item_chat.xml -->
    <string name="chat_text">Chat Message</string>

    <!-- All Purpose Text =======================================================================-->
    <!-- Logging -->
    <string name="log_entered_function">Entered >></string>
    <string name="log_exiting_function">Exiting >></string>
    <string name="log_was_inflated_blerb"> was Inflated</string>
    <string name="log_was_deflated_blerb"> was Deflated</string>
    <string name="log_existing_account_frag_deflated">existingAccountFragment Deflation Called from onDestroy()</string>
    <string name="log_new_account_frag_deflated">newAccountFragment Deflation Called from onDestroy()</string>
    <string name="log_no_frag_to_destroy">No Fragment to Destroy or chosenFragment {int} is Invalid</string>
    <string name="log_dataset_invalid_count">Dataset has Invalid Count</string>
    <string name="log_dataset_invalid_beach_name">Dataset Contains an Invalid Beach Name</string>

    <!-- Toast Messages -->
    <string name="msg_back_button_unavailable">Back Button is Disabled</string>
</resources>